--- a/configs/pg_in_domain.yaml
+++ b/configs/pg_in_domain.yaml
@@ -3,21 +3,21 @@ name: "pg-in-domain"
 data:
   src: "de"
   trg: "en"
-  train: "test/data/iwslt14/train.bpe.32000"
-  dev: "test/data/iwslt14/valid.bpe.32000"
-  test: "test/data/iwslt14/test.bpe.32000"
+  train: "/local/test/data/iwslt14/train.bpe.32000"
+  dev: "/local/test/data/iwslt14/valid.bpe.32000"
+  test: "/local/test/data/iwslt14/test.bpe.32000"
   level: "bpe"
   lowercase: True
   max_sent_length: 62
-  src_vocab: "iwslt14_vocab.txt"
-  trg_vocab: "iwslt14_vocab.txt"
+  src_vocab: "models/pretrained_iwslt14/src_vocab.txt"
+  trg_vocab: "models/pretrained_iwslt14/trg_vocab.txt"
 
 testing:
   beam_size: 5
   alpha: 1.0
 
 training:
-  load_model: "../pretrained_iwslt14/best.ckpt"
+  load_model: "models/pretrained_iwslt14/best.ckpt"
   reset_best_ckpt: True            # if True, reset the tracking of the best checkpoint and scores. Use for domain adaptation or fine-tuning with new metrics or dev data.
   reset_scheduler: True            # if True, overwrite scheduler in loaded checkpoint with parameters specified in this config. Use for domain adaptation or fine-tuning.
   reset_optimizer: True
