--- a/configs/pg_in_domain_lb.yaml
+++ b/configs/pg_in_domain_lb.yaml
@@ -1,23 +1,23 @@
-name: "pg-cross-domain"
+name: "pg-in-domain"
 
 data:
   src: "de"
   trg: "en"
-  train: "test/data/iwslt14/train.bpe.32000"
-  dev: "test/data/iwslt14/valid.bpe.32000"
-  test: "test/data/iwslt14/test.bpe.32000"
+  train: "/local/test/data/iwslt14/train.bpe.32000"
+  dev: "/local/test/data/iwslt14/valid.bpe.32000"
+  test: "/local/test/data/iwslt14/test.bpe.32000"
   level: "bpe"
   lowercase: True
   max_sent_length: 62
-  src_vocab: "models/pretrained_wmt15/src_vocab.txt"
-  trg_vocab: "models/pretrained_wmt15/trg_vocab.txt"
+  src_vocab: "models/pretrained_iwslt14/src_vocab.txt"
+  trg_vocab: "models/pretrained_iwslt14/trg_vocab.txt"
 
 testing:
   beam_size: 5
   alpha: 1.0
 
 training:
-  load_model: "models/pretrained_wmt15/best.ckpt"
+  load_model: "models/pretrained_iwslt14/best.ckpt"
   reset_best_ckpt: True            # if True, reset the tracking of the best checkpoint and scores. Use for domain adaptation or fine-tuning with new metrics or dev data.
   reset_scheduler: True            # if True, overwrite scheduler in loaded checkpoint with parameters specified in this config. Use for domain adaptation or fine-tuning.
   reset_optimizer: True
@@ -29,11 +29,11 @@ training:
   patience: 5
   decrease_factor: 0.7
   loss: "crossentropy"
-  learning_rate: 0.0001
+  learning_rate: 0.00001
   learning_rate_min: 0.00000005
   weight_decay: 0.0
   label_smoothing: 0.1
-  batch_size: 256
+  batch_size: 2048
   batch_type: "token"
   early_stopping_metric: "eval_metric"
   epochs: 10
@@ -41,7 +41,7 @@ training:
   logging_freq: 500
   track_peakiness_freq: 500
   eval_metric: "bleu"
-  model_dir: "models/pg_cross_domain"
+  model_dir: "models/pg_in_domain_lb"
   overwrite: True
   shuffle: True
   use_cuda: True
@@ -74,22 +74,22 @@ model:
     num_layers: 6
     num_heads: 4
     embeddings:
-      embedding_dim: 128
+      embedding_dim: 256
       scale: True
       dropout: 0.
         # typically ff_size = 4 x hidden_size
-    hidden_size: 128
-    ff_size: 512
+    hidden_size: 256
+    ff_size: 1024
     dropout: 0.3
   decoder:
     type: "transformer"
     num_layers: 6
     num_heads: 4
     embeddings:
-      embedding_dim: 128
+      embedding_dim: 256
       scale: True
       dropout: 0.
         # typically ff_size = 4 x hidden_size
-    hidden_size: 128
-    ff_size: 512
+    hidden_size: 256
+    ff_size: 1024
     dropout: 0.3
